kcd_colombia_2025/challenge_2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: challenge-2
  name: challenge-2-web-service-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-python
  template:
    metadata:
      labels:
        app: web-python
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: web
          image: arboledaalejandro/web-challenge-2:3.2.0
          ports:
            - containerPort: 80
          securityContext:
            runAsUser: 1000
