kcd_colombia_2025/challenge_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: challenge-2
  name: web-service
spec:
  selector:
    app: web-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
