kcd_colombia_2025/challenge_2/drop-all-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: drop-all-capabilities
spec:
  rules:
    - name: add-drop-all-capabilities
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - challenge-2
      mutate:
        patchesJson6902: |-
          - op: add
            path: /spec/containers/0/securityContext/capabilities/drop
            value:
              - "ALL"
