kcd_colombia_2025/challenge_2/validationAdmission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: disallow-root-user
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - expression: "!(object.spec.securityContext.runAsUser == 0 || object.spec.containers.all(c, c.securityContext.runAsUser == 0))"
      message: "Using runAsUser: 0 is not allowed"
